--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+ version: 2
  jobs:
    one:
      docker:
@@ -12,7 +12,7 @@ version: 2
        - image: circleci/ruby:2.4.1
      steps:
        - checkout
-       - run: echo "A second hello"
+       - run: echo "A more familiar hi"
        - run: sleep 15
  workflows:
    version: 2
