--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,22 @@
-version: 2
-jobs:
-  build:
-    docker: # use the docker executor type; machine and macos executors are also supported
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
-    steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+ version: 2
+ jobs:
+   one:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "A first hello"
+       - run: sleep 25
+   two:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "A more familiar hi"
+       - run: sleep 15
+ workflows:
+   version: 2
+   one_and_two:
+     jobs:
+       - one
+       - two
