--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,18 @@
 version: 2
+
 jobs:
-  build:
+  deploy-ecr-repository:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: hashicorp/terraform:0.12.3
     steps:
       - checkout
-      - run: echo "A first hello"
+      - *deploy_infrastruture
+
+deploy_infrastructure: &deploy_infrastructure
+  run:
+    name: Create/update infrastructure
+    command: |
+      source $BASH_ENV
+      terraform init -input=false
+      terraform plan -out=tfplan
+      terraform apply -input=false tfplan
