--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@ jobs:
       - image: hashicorp/terraform:0.12.3
     steps:
       - checkout
-      - *deploy_infrastruture
+      - deploy_infrastruture
